<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NWS Weather Alerts Widget</string>
    <string name="about_version">Version %1$s (Build %2$d)</string>
    <string name="action_about">About This App</string>
    <string name="action_demo">Demo all alert types</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Show Source XML</string>
    <string name="activity_detail">Alert Detail</string>
    <string name="demo_header">This screen displays a list of every alert type the NWS says
         they can possibly send, as a demo of what that alert will look like when displayed.
         This is mainly to make it easy to tell which items are still missing appropriate
         icons or background colors.  The NWS Logo on a gray background is the default used
         if nothing else has been set.</string>
    <string name="icon">Icon</string>
    <string name="ok">OK</string>
    <string name="alert_title">Widget Loading</string>
    <string name="alert_empty">There are no alerts at this time</string>
    <string name="alert_summary">Please wait&#8230;</string>
    <string name="widget_title">Current Active NWS Alerts</string>
    <string name="choose_state">Choose State</string>
    <string name="choose_county">Choose County</string>
    <string name="detail_retrieval">Retreiving alert detail&#8230;</string>
    <string name="detail_target">Target Area:</string>
    <string name="detail_expires">Expires:</string>
    <string name="detail_description">Alert</string>
    <string name="detail_instructions">Instructions</string>
    <string name="detail_action_showxml">Show XML</string>
    <string name="detail_action_hidexml">Hide XML</string>
    
</resources>