<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:stretchColumns="*" >

    <TableRow>

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="left|center"
            android:contentDescription="@string/icon"
            android:src="@drawable/app_icon" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left|center" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/version_string"
                android:layout_width="fill_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/info_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:layout_span="2"
            android:textAlignment="center"
            android:textColor="#444444"
            android:textSize="12sp"
            android:textStyle="italic" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/about_ok_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:layout_span="2"
            android:gravity="center"
            android:text="@string/ok" />
    </TableRow>

</TableLayout>